<resources>
    <string name="app_name">喜铺联网</string>
    <string name="navi_header">喜铺联网</string>
    <string name="nameLimit">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890_</string>
    <string name="codeLimit">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890</string>
    <string name="requestError">网络异常，请稍后重试</string>
    <string name="fullText">全文</string>
    <string name="packUp">收起</string>
    <string name="scan">扫一扫</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="UpdateLater">以后再说</string>
    <string name="nowUpdate">立即更新</string>
    <string name="appHasNewUpdate">应用程序有新版本更新</string>
    <string name="nowIsWifi">您当前正在使用移动网络，是否继续下载？</string>
    <string name="download">下载</string>
    <string name="search">搜索</string>
    <string name="downloading">正在下载，请稍后...</string>
    <string name="updateDownloadProgress">正在下载:%1$d%%</string>
    <string name="homePage">首页</string>
    <string name="found">发现</string>
    <string name="businessCooperation">商务合作</string>
    <string name="my">我的</string>
    <string name="getVerify">获取验证码</string>
    <string name="navigation">导航</string>
    <string name="skip">跳过</string>
    <string name="accent">账号</string>
    <string name="password">密码</string>
    <string name="registerAccent">注册账号</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="otherLoginType">一 其他登录方式 一</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputPwd">请输入密码</string>
    <string name="inputVerify">请输入获取的验证码</string>
    <string name="settingLoginPwd">请设置登录密码</string>
    <string name="settingLoginPwdAgain">再次输入登录密码</string>
    <string name="inputRefereesPhone">请输入推荐人手机号(选填)</string>
    <string name="chooseRegisterCity">请选择注册城市</string>
    <string name="inputCommunity">请输入所属小区(必填)</string>
    <string name="readAndAgree">我已阅读并同意</string>
    <string name="userAgreement">《喜铺联网用户协议》</string>
    <string name="userAgreement2">喜铺联网用户协议</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="bind">绑定</string>
    <string name="findPwd">找回密码</string>
    <string name="accentLogin">账号登录</string>
    <string name="quickLogin">快捷登录</string>
    <string name="existingLoginAccount">已有账号登录</string>
    <string name="registerNewAccent">注册新账号</string>
    <string name="settingPayPwdHint">为了您的账户安全，请设置支付密码</string>
    <string name="settingPayPwd">设置支付密码</string>
    <string name="settingNow">好的，立刻去设置</string>
    <string name="nextSayAgain">算了，下次再说吧</string>
    <string name="agreeUserAgreement">请同意《喜铺联网用户协议》</string>
    <string name="inputCorrectPhone">请输入正确的手机号</string>
    <string name="twoPasswordsNotMatch">两次设置的密码不一致，请重新输入</string>
    <string name="hasRegister">该手机号已注册,请重新输入</string>
    <string name="notRegister">该手机号暂未注册,请重新输入</string>
    <string name="verifyHasSend">验证码已发出</string>
    <string name="searchServiceAndInformation">搜索服务/资讯</string>
    <string name="searchShopAndMaster">搜索店铺/师傅</string>
    <string name="chooseLocation">请选择位置</string>
    <string name="chooseDoorTime">请选择上门时间</string>
    <string name="chooseTime">选择时间</string>
    <string name="searchCity">搜索城市</string>
    <string name="chooseCity">选择城市</string>
    <string name="NotifyDetails">通知详情</string>
    <string name="appointmentNow">立即预约</string>
    <string name="service">服务</string>
    <string name="information">资讯</string>
    <string name="doorOfTime">上门时间</string>
    <string name="doorNow">立即上门</string>
    <string name="serviceType">服务类型</string>
    <string name="chargeStandard">收费参考</string>
    <string name="serviceDetails">服务详情</string>
    <string name="uploadPic">上传图片</string>
    <string name="uploadVideo">上传视频</string>
    <string name="recordVoice">录制音频</string>
    <string name="clickRecord">点击录制</string>
    <string name="orderOnline">在线下单</string>
    <string name="checkDetails">查看详情</string>
    <string name="finishAtLeastOne">请在以下信息中至少完成一项</string>
    <string name="inputDescription">请输入文字描述</string>
    <string name="quickOrder">快速下单</string>
    <string name="bookInformation">预约信息</string>
    <string name="addServiceAddress">新增服务地址</string>
    <string name="manager">管理</string>
    <string name="complete">完成</string>
    <string name="edit">编辑</string>
    <string name="chooseArea">选择区域</string>
    <string name="pleaseChooseArea">请选择区域</string>
    <string name="pleaseChooseCBS">请选择小区/大厦/学校</string>
    <string name="CBS">小区/大厦/学校</string>
    <string name="buildAndDoorNum">楼号-门牌号</string>
    <string name="ownerName">业主姓名</string>
    <string name="contactPhone">联系电话</string>
    <string name="inputBuildAndDoorNum">请输入楼号-门牌号</string>
    <string name="inputOwnerName">请输入业主姓名</string>
    <string name="inputContactPhone">请输入联系电话</string>
    <string name="save">保存</string>
    <string name="serviceCommitment">服务承诺</string>
    <string name="warrantyRules">保修规则</string>
    <string name="returnHome">返回首页</string>
    <string name="submitOrderSuccess">下单成功，请耐心等待师傅接单</string>
    <string name="Retake">重录</string>
    <string name="localVideo">本地视频</string>
    <string name="shootVideo">拍摄视频</string>
    <string name="warmPrompt">温馨提示</string>
    <string name="sureDeleteThis">确定删除该记录?</string>
    <string name="settingVideoPermission">请到设置界面设置录音、相机或存储卡权限</string>
    <string name="settingExtraPermission">请到设置界面设置存储卡权限</string>
    <string name="settingVoicePermission">请到设置界面设置录音或存储卡权限</string>
    <string name="submitSuccess">提交成功</string>
    <string name="shouldPayDeposit">应付定金</string>
    <string name="payDeposit">支付定金</string>
    <string name="choosePayType">请选择支付方式</string>
    <string name="balancePay">余额支付</string>
    <string name="payAgain">支付失败，是否重新支付</string>
    <string name="whetherCall">是否拨打</string>
    <string name="call">拨打</string>
    <string name="allComment">全部评论</string>
    <string name="send">发送</string>
    <string name="sendCommentHint">请输入评论信息</string>
    <string name="details">详情</string>
    <string name="brandStreet">品牌街</string>
    <string name="settingLocationPermission">请到设置界面设置定位权限</string>
    <string name="tenants">商家入驻</string>
    <string name="tenantsReview">商家入驻(审核中)</string>
    <string name="tenantsApproved">商家入驻(已审核)</string>
    <string name="tenantsFailure">商家入驻(审核失败)</string>
    <string name="tenantsDisable">商家入驻(已禁用)</string>
    <string name="uploadStoreImage">上传门店头图</string>
    <string name="uploadBusinessLicense">上传营业执照</string>
    <string name="storeName">店铺名称</string>
    <string name="store">店铺</string>
    <string name="mainBusiness">主营业务</string>
    <string name="inArea">所在地区</string>
    <string name="inAddress">所在地址</string>
    <string name="specificAddress">具体地址</string>
    <string name="tagMaps">标记地图</string>
    <string name="inputStoreName">请输入店铺名称</string>
    <string name="chooseMainBusiness">请选择主营业务</string>
    <string name="chooseInArea">请选择所在地区</string>
    <string name="inputSpecificAddress">请输入门店具体地址</string>
    <string name="goTag">去标记</string>
    <string name="pleaseTag">请先标记地图</string>
    <string name="hasTag">已标记</string>
    <string name="chooseStoreImage">请选择门店头图</string>
    <string name="chooseBusinessLicense">请选择营业执照</string>
    <string name="shopReviewHint">商家信息正在审核中，请耐心等待</string>
    <string name="shopDisableHint">商家信息已被禁用，请联系客服</string>
    <string name="reSubmitShopHint">重新提交，商家信息会重新审核，确认提交吗</string>
    <string name="comprehensiveScore">综合评分</string>
    <string name="distanceYou">距离您</string>
    <string name="master">师傅</string>
    <string name="masterDetails">师傅详情</string>
    <string name="views">浏览量</string>
    <string name="hasSendInfo">已发布文章</string>
    <string name="shopDetails">商家详情</string>
    <string name="shopAddress">商家</string>
    <string name="serviceContent">服务内容</string>
    <string name="masterTag">师傅标签</string>
    <string name="seeAllComment">查看全部评论</string>
    <string name="locateFailure">定位失败</string>
    <string name="min">分</string>
    <string name="inputPayPassword">请输入支付密码</string>
    <string name="payPwdError">支付密码错误</string>
    <string name="orderState">订单状态：</string>
    <string name="hasWaitTime">已等待时间</string>
    <string name="waitPayMoney">待支付金额:</string>
    <string name="contactMaster">联系师傅</string>
    <string name="cancelTime">取消时间:</string>
    <string name="completeTime">完成时间:</string>
    <string name="orderNumber">订单号</string>
    <string name="hasCancelMaster">已取消师傅</string>
    <string name="watchList">查看列表</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="voice">音频</string>
    <string name="serviceMaster">服务师傅</string>
    <string name="hasOrder">已接单</string>
    <string name="waitPay">待支付</string>
    <string name="hasCancel">已取消</string>
    <string name="hasComplete">已完成</string>
    <string name="orderDetails">订单详情</string>
    <string name="bindSuccess">绑定成功</string>
    <string name="assignSuccess">指派成功</string>
    <string name="realName">真实姓名</string>
    <string name="agentLevel">代理级别</string>
    <string name="agentArea">代理区域</string>
    <string name="provinceLevel">省级</string>
    <string name="cityLevel">市级</string>
    <string name="chooseAgentLevel">请选择代理级别</string>
    <string name="chooseAgentArea">请选择代理区域</string>
    <string name="rewardAmount">奖励金额(元)</string>
    <string name="totalInvitation">总邀请人数</string>
    <string name="monthBonus">本月奖励(元)</string>
    <string name="monthInvitation">本月邀请人数</string>
    <string name="myReferees">我的推荐人</string>
    <string name="myRecommended">我的推荐</string>
    <string name="inviteFriends">邀请好友</string>
    <string name="people">人</string>
    <string name="clickShare">点次分享二维码邀请好友</string>
    <string name="myQrCode">我的二维码</string>
    <string name="distributionDetails">分销明细</string>
    <string name="comment">评论</string>
    <string name="hotSearch">热门搜索</string>
    <string name="historySearch">历史搜索</string>
    <string name="locateFailureClick">定位失败,点击重新获取！</string>
    <string name="requestLocationInfo">获取定位信息中...</string>
    <string name="OrdinaryMember">普通会员</string>
    <string name="Member">会员</string>
    <string name="name">名称</string>
    <string name="MyAccount">我的账户</string>
    <string name="MyGiftVoucher">我的礼券</string>
    <string name="MyOrder">我的订单</string>
    <string name="MyInvoice">我的发票</string>
    <string name="ServiceAddress">服务地址</string>
    <string name="MyEvaluation">我的评论</string>
    <string name="ContactCustomerService">联系客服</string>
    <string name="MoreSettings">更多设置</string>
    <string name="PersonalInformation">个人信息</string>
    <string name="headPortrait">头像</string>
    <string name="nick">昵称</string>
    <string name="gender">性别</string>
    <string name="ChangeThePhoneNumber">更换手机号</string>
    <string name="RealNameSeriously">实名认证</string>
    <string name="BankCard">银行卡</string>
    <string name="ToAuthenticate">去认证</string>
    <string name="Certified">已认证</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="SexSelection">性别选择</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">保密</string>
    <string name="ModifyTheNickname">修改昵称</string>
    <string name="EnterYourNickname">请输入您的昵称</string>
    <string name="NickPrompt">好的昵称,能更快让您的小伙伴记住</string>
    <string name="EnterTheNewCellPhoneNumber">请输入新手机号</string>
    <string name="Submit">提交</string>
    <string name="real_name">请输入真实姓名</string>
    <string name="idcards">请输入身份证号码</string>
    <string name="Face_authentication">请进行人脸认证</string>
    <string name="score_layout">评分：</string>
    <string name="Shopping_cart">购物车</string>
    <string name="confirm">确定</string>
    <string name="confirm_scavenging_cache_setup">确认清除缓存</string>
    <string name="Please_enter_your_evaluation">请输入您的评价</string>
    <string name="Comments_layout">评价：</string>
    <string name="Category">分类</string>
</resources>