<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorContentBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/pc_cream_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/colorText"
        android:textSize="@dimen/font_size_14"
        android:background="@drawable/bottom_border_white" />
    <TextView
        android:background="@color/colorWhite"
        android:id="@+id/pc_image_txt"
        android:textColor="@color/colorText"
        android:textSize="@dimen/font_size_14"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:gravity="center"
        android:text="@string/album" />
    <TextView
        android:background="@color/colorWhite"
        android:id="@+id/pc_cancel_txt"
        android:textColor="@color/colorText"
        android:textSize="@dimen/font_size_14"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:gravity="center"
        android:text="@string/cancel" />
</LinearLayout>