<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_corner_white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="@dimen/margin_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_16"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:text="@string/warmPrompt"/>
    <TextView
        android:id="@+id/content_tv"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_24"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/colorText"
        android:text="@string/whetherCall"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dis_0.5"
        android:background="@color/colorBorder"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/call_tv"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_15"
            android:textColor="@color/colorMain"
            android:text="@string/call"/>
        <View
            android:layout_width="@dimen/dis_0.5"
            android:layout_height="match_parent"
            android:background="@color/colorBorder"/>
        <TextView
            android:id="@+id/cancel_tv"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_15"
            android:textColor="@color/colorMain"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>