<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/pop_yuanjiao"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_36"
            android:gravity="center"
            android:textColor="@color/colorTime"
            android:textSize="@dimen/content_text_size_14"
            android:text="@string/confirm_scavenging_cache_setup"
            android:background="@drawable/bottom_border_white" />

        <TextView
            android:id="@+id/tv_confirm_pcc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45"
            android:gravity="center"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/content_text_size_16"
            android:text="@string/confirm" />
        <!--android:background="@drawable/bottom_border_white"-->
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel_pcc"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/content_text_size_16"
        android:layout_margin="@dimen/margin_8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:gravity="center"
        android:background="@drawable/pop_yuanjiao"
        android:text="@string/cancel" />
</LinearLayout>