<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/time_tv"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginBottom="@dimen/margin_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/colorText"
        android:text="@string/clickRecord"/>
    <ImageView
        android:id="@+id/record_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/audio_rec_btn"/>
    <LinearLayout
        android:id="@+id/bottom_lyt"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_12"
        android:background="@drawable/top_border_white"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/re_record_tv"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/font_size_16"
            android:text="@string/Retake"/>
        <View
            android:layout_width="@dimen/dis_0.5"
            android:layout_height="match_parent"
            android:background="@color/colorBorder"/>
        <TextView
            android:id="@+id/sure_tv"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/font_size_16"
            android:text="@string/sure"/>
    </LinearLayout>
</LinearLayout>